k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: execution-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: execution-service
    app.kubernetes.io/component: worker
  ports:
    - name: http
      port: 80
      targetPort: http
